// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex In-Meeting All Media 1`] = `
<div
  className="wxc-in-meeting"
>
  <div
    className="wxc-remote-media remote-media-in-meeting split-screen"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
    <video
      autoPlay={true}
      playsInline={true}
    />
    <audio
      autoPlay={true}
    />
  </div>
  <div
    className="wxc-local-media local-media-in-meeting"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
  </div>
</div>
`;

exports[`Storyshots Meetings/Webex In-Meeting Remote Media Only 1`] = `
<div
  className="wxc-in-meeting"
>
  <div
    className="wxc-remote-media remote-media-in-meeting split-screen"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
    <video
      autoPlay={true}
      playsInline={true}
    />
    <audio
      autoPlay={true}
    />
  </div>
  <div
    className="wxc-local-media wxc-local-media-no-media local-media-in-meeting"
  >
    <div
      className="md-avatar md-avatar--medium"
      title="Barbara German"
    >
      <span
        className="md-avatar__letter"
        style={
          Object {
            "backgroundColor": "",
            "color": "",
          }
        }
      >
        BG
      </span>
      <img
        alt="Barbara German"
        className="md-avatar__img md-avatar__img--hidden"
        draggable={false}
        onError={[Function]}
        onLoad={[Function]}
        src="./images/barbara.png"
      />
    </div>
  </div>
</div>
`;
